--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 <p><span style="opacity:0.25">1 2 3 4 5 6</span></p>
 </div>
 </div>
-<div style="line-height: 3">
+<div style="line-height: 150px;">
 <ul>
 <li class="fragment"><p><strong>1</strong> - Introduction</p></li>
 <li class="fragment"><p><strong>2</strong> - Summary of the first 2 years</p></li>
@@ -503,20 +503,20 @@
 <p><span style="color: black;">2</span></p>
 </div>
 <div class="fragment fade-in absolute" data-id="VideoSoft" data-fragment-index="1" style="top: 30%; left: 0%; ">
-<p><video data-src="Videos/P4810662.MP4" height="600" controls=""><a href="Videos/P4810662.MP4">Video</a></video></p>
+<p><video data-src="Videos/P4810662.MP4" height="650" controls=""><a href="Videos/P4810662.MP4">Video</a></video></p>
 </div>
 <div class="fragment fade-in absolute" data-id="VideoHard" data-fragment-index="1" style="top: 30%; left: 50%; ">
-<p><video data-src="Videos/DJI_0076_1.mp4" height="600" controls=""><a href="Videos/DJI_0076_1.mp4">Video</a></video></p>
+<p><video data-src="Videos/DJI_0076_1.mp4" height="650" controls=""><a href="Videos/DJI_0076_1.mp4">Video</a></video></p>
 </div>
 <div class="fragment fade-in" data-fragment-index="1">
 <ul>
 <li>Soft Bottom and Hard Bottom</li>
 </ul>
 </div>
-<div class="fragment absolute fade-in" data-id="TextSoft" data-fragment-index="1" style="left: 2%; bottom: 20%; ">
+<div class="fragment absolute fade-in" data-id="TextSoft" data-fragment-index="1" style="left: 2%; bottom: 15%; ">
 <p><span style="color: black; font-size: 40px">Aveiro Lagoon, Portugal</span></p>
 </div>
-<div class="fragment absolute fade-in" data-fragment-index="1" style="left: 52%; bottom: 20%; ">
+<div class="fragment absolute fade-in" data-fragment-index="1" style="left: 52%; bottom: 15%; ">
 <p><span style="color: black; font-size: 40px">Mesquer, France</span></p>
 </div>
 </section>
@@ -554,13 +554,14 @@
 <div class="absolute fragment fade-in-then-out" data-fragment-index="8" style="top: 43%; left: 50%; ">
 <p><img data-src="Images/eelgrass_slide3.jpg" height="700"></p>
 </div>
-<div class="fragment fade-out" data-fragment-index="12">
+<div class="fragment fade-out" data-fragment-index="13">
 <div class="absolute" data-id="VideoSoft" style="top: 0%; left: 50%; ">
-<p><video data-src="Videos/P4810662.MP4" height="400" controls=""><a href="Videos/P4810662.MP4">Video</a></video></p>
+<p><video data-src="Videos/P4810662_2.MP4" height="400" controls=""><a href="Videos/P4810662_2.MP4">Video</a></video></p>
 </div>
 <div class="absolute" data-id="TextSoft" style="top: 27%; left: 52%; ">
 <p><span style="color: black; font-size: 30px">Aveiro Lagoon, Portugal</span></p>
 </div>
+<div class="fragment fade-out" data-fragment-index="12">
 <div class="absolute fragment fade-in" data-fragment-index="9" style="top: 70%; left: 48%; ">
 <p><img data-src="Images/FishSeagrass.jpg" height="350"></p>
 </div>
@@ -576,10 +577,22 @@
 </ul>
 </div>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="13" style="top: 50%; left: 60%; ">
+<div class="fragment fade-in absolute" data-fragment-index="12" style="top: 37%; left: 48%; ">
+<ul>
+<li>Some species pose a threat to these habitats</li>
+</ul>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="12" style="top: 45%; left: 55%; ">
+<p><img data-src="Images/Green_Algae_bloom_cropped.jpg" height="600"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="12" style="top: 45%; left: 75%; ">
+<p><img data-src="Images/Red_Algae_bloom_cropped.jpg" height="600"></p>
+</div>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="15" style="top: 50%; left: 60%; ">
 <p><img data-src="Images/European_Commission.svg.png" height="444"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="14" style="top: 33%; left: 50%; ">
+<div class="absolute fragment fade-in" data-fragment-index="15" style="top: 33%; left: 50%; ">
 <p><img data-src="Images/Arrow.png" height="100"></p>
 </div>
 <div>
@@ -637,16 +650,16 @@
 <li>Carbon fixation</li>
 </ul>
 </div>
-<div class="fragment fade-in absolute" data-fragment-index="12" style="top: 10%; left: 52%; ">
+<div class="fragment fade-in absolute" data-fragment-index="13" style="top: 10%; left: 52%; ">
 <p><span style="font-size: 70px">Improve the protection</span></p>
 </div>
-<div class="fragment fade-in absolute" data-fragment-index="13" style="top: 20%; left: 45%; ">
+<div class="fragment fade-in absolute" data-fragment-index="14" style="top: 20%; left: 45%; ">
 <ul>
 <li>Water Framework Directive (2001)</li>
 <li>Marine Strategy Framework Directive (2008)</li>
 </ul>
 </div>
-<div class="fragment fade-in absolute" data-fragment-index="14" style="top: 36%; left: 55%; ">
+<div class="fragment fade-in absolute" data-fragment-index="15" style="top: 36%; left: 55%; ">
 <p>Good Knowledge of soft bottom intertidal habitats</p>
 </div>
 </section>
