--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
 </ul>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="2" style="top: 20%; left: 20%; ">
-<p><img data-src="Images/matrice200.png" height="300"></p>
+<p><img data-src="Images/Matrice200.png" height="300"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="3" style="top: 20%; right: 35%; ">
 <p><img data-src="Images/Sentinel2.png" height="300"></p>
