--- a/index.html
+++ b/index.html
@@ -896,26 +896,29 @@
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
-<div class="absolute" data-id="SpectralSignature" style="top: 16%; left: -8%; ">
+<div class="absolute" data-id="SpectralSignature" style="top: 14%; left: -8%; ">
 <p><img data-src="Images/Figure_Hyperspectral.png" height="680"></p>
 </div>
-<div class="absolute" data-id="SpectralSignature" style="top: 12.5%; right: -8%; ">
+<div class="absolute" data-id="SpectralSignature" style="top: 10.5%; right: -8%; ">
 <p><img data-src="Images/Disc_Pigment_Table.png" height="700"></p>
 </div>
 <div class="absolute" style="left: 0%; bottom: 0%; ">
-<p><img data-src="Images/Pheophyceae_cropped.png" height="250"></p>
+<p><img data-src="Images/Pheophyceae_cropped.png" height="350"></p>
 </div>
 <div class="absolute" style="left: 20%; bottom: 0%; ">
-<p><img data-src="Images/Chlorophyceae_cropped.png" height="250"></p>
+<p><img data-src="Images/Chlorophyceae_cropped.png" height="350"></p>
 </div>
 <div class="absolute" style="left: 40%; bottom: 0%; ">
-<p><img data-src="Images/Magnoliopsida_cropped.png" height="250"></p>
+<p><img data-src="Images/Magnoliopsida_cropped.png" height="350"></p>
 </div>
 <div class="absolute" style="left: 60%; bottom: 0%; ">
-<p><img data-src="Images/Bacillariophyceae_cropped.png" height="250"></p>
+<p><img data-src="Images/Bacillariophyceae_cropped.png" height="350"></p>
 </div>
 <div class="absolute" style="left: 80%; bottom: 0%; ">
-<p><img data-src="Images/Rodophyceae_cropped.png" height="250"></p>
+<p><img data-src="Images/Rodophyceae_cropped.png" height="350"></p>
+</div>
+<div class="absolute" style="left: 2%; bottom: 28%; ">
+<p><span style="font-size: 40px">Phaeophyceae</span></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
