--- a/index.html
+++ b/index.html
@@ -870,9 +870,12 @@
 <p><img data-src="Images/workflowthesis_0.png" width="2400"></p>
 </div>
 <div class="fragment fade-in-then-out absolute" data-fragment-index="9" style="top: 35%; left: -1%; ">
-<div class="redbox absolute" style="width: 1700px; height: 300px; ">
+<div class="greenbox absolute" style="width: 1700px; height: 300px; ">
 
 </div>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="9" style="top: 25%; left: 27%; ">
+<p><span style="font-size: 80px; color: green">Done !</span></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="10" style="top: 14%; left: 0%; ">
 <p><img data-src="Images/workflowthesis_4.png" width="2400"></p>
@@ -882,6 +885,14 @@
 
 </div>
 </div>
+<div class="fragment fade-in absolute" data-fragment-index="10" style="top: 36%; left: 18%; ">
+<div class="redbox absolute" style="width: 680px; height: 600px; ">
+
+</div>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="10" style="top: 25%; left: 45%; ">
+<p><span style="font-size: 80px; color: red">Upcoming !</span></p>
+</div>
 </section>
 <section id="section-2" class="slide level2">
 <h2></h2>
@@ -889,8 +900,8 @@
 <p><span style="color: black; font-size: 150px; font-weight: bold;">Summary of the first 2 years</span></p>
 </div>
 </section>
-<section id="hyperspectral" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Hyperspectral</h2>
+<section id="challenges-to-map-intertidal-vegetations" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Challenges to map intertidal vegetations</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
@@ -919,6 +930,18 @@
 </div>
 <div class="absolute" style="left: 2%; bottom: 28%; ">
 <p><span style="font-size: 40px">Phaeophyceae</span></p>
+</div>
+<div class="absolute" style="left: 22%; bottom: 28%; ">
+<p><span style="font-size: 40px">Chlorophyceae</span></p>
+</div>
+<div class="absolute" style="left: 42%; bottom: 28%; ">
+<p><span style="font-size: 40px">Magnoliopsida</span></p>
+</div>
+<div class="absolute" style="left: 61%; bottom: 28%; ">
+<p><span style="font-size: 40px">Bacillariophyceae</span></p>
+</div>
+<div class="absolute" style="left: 82%; bottom: 28%; ">
+<p><span style="font-size: 40px">Rhodophyceae</span></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
