--- a/index.html
+++ b/index.html
@@ -900,8 +900,8 @@
 <p><span style="color: black; font-size: 150px; font-weight: bold;">Summary of the first 2 years</span></p>
 </div>
 </section>
-<section id="challenges-to-map-intertidal-vegetations" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Challenges to map intertidal vegetations</h2>
+<section id="challenges-to-map-intertidal-vegetation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Challenges to map intertidal vegetation</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
@@ -942,6 +942,15 @@
 </div>
 <div class="absolute" style="left: 82%; bottom: 28%; ">
 <p><span style="font-size: 40px">Rhodophyceae</span></p>
+</div>
+</section>
+<section id="discriminate-green-macrophytes-using-remote-sensing" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Discriminate green macrophytes using remote sensing</h2>
+<div class="absolute" data-id="SpectralSignature" style="top: 45%; left: -10%; ">
+<p><img data-src="Images/Figure_Hyperspectral_Instru.png" height="680"></p>
+</div>
+<div class="absolute" style="top: 45%; right: -10%; ">
+<p><img data-src="Images/Speclib_Drone_Intru.png" height="680"></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
