--- a/index.html
+++ b/index.html
@@ -907,14 +907,23 @@
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
-<div class="absolute" data-id="SpectralSignature" style="top: 14%; left: -8%; ">
+<div class="absolute fragment fade-out" data-id="SpectralSignature" data-fragment-index="1" style="top: 14%; left: -8%; ">
 <p><img data-src="Images/Figure_Hyperspectral.png" height="680"></p>
 </div>
-<div class="absolute" data-id="SpectralSignature" style="top: 10.5%; right: -8%; ">
+<div class="absolute fragment fade-in" data-id="SpectralSignature" data-fragment-index="1" style="top: 14%; left: -8%; ">
+<p><img data-src="Images/Figure_Hyperspectral_faded.png" height="680"></p>
+</div>
+<div class="absolute fragment fade-out" data-id="SpectralSignature" data-fragment-index="1" style="top: 10.5%; right: -8%; ">
 <p><img data-src="Images/Disc_Pigment_Table.png" height="700"></p>
 </div>
-<div class="absolute" style="left: 0%; bottom: 0%; ">
+<div class="absolute fragment fade-in" data-id="SpectralSignature" data-fragment-index="1" style="top: 10.5%; right: -8%; ">
+<p><img data-src="Images/Disc_Pigment_Table_faded.png" height="700"></p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="left: 0%; bottom: 0%; ">
 <p><img data-src="Images/Pheophyceae_cropped.png" height="350"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="left: 0%; bottom: 0%; ">
+<p><img data-src="Images/Pheophyceae_cropped_faded.png" height="350"></p>
 </div>
 <div class="absolute" style="left: 20%; bottom: 0%; ">
 <p><img data-src="Images/Chlorophyceae_cropped.png" height="350"></p>
@@ -922,11 +931,17 @@
 <div class="absolute" style="left: 40%; bottom: 0%; ">
 <p><img data-src="Images/Magnoliopsida_cropped.png" height="350"></p>
 </div>
-<div class="absolute" style="left: 60%; bottom: 0%; ">
+<div class="absolute fragment fade-out" data-fragment-index="1" style="left: 60%; bottom: 0%; ">
 <p><img data-src="Images/Bacillariophyceae_cropped.png" height="350"></p>
 </div>
-<div class="absolute" style="left: 80%; bottom: 0%; ">
+<div class="absolute fragment fade-in" data-fragment-index="1" style="left: 60%; bottom: 0%; ">
+<p><img data-src="Images/Bacillariophyceae_cropped_faded.png" height="350"></p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="left: 80%; bottom: 0%; ">
 <p><img data-src="Images/Rodophyceae_cropped.png" height="350"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="left: 80%; bottom: 0%; ">
+<p><img data-src="Images/Rodophyceae_cropped_faded.png" height="350"></p>
 </div>
 <div class="absolute" style="left: 2%; bottom: 28%; ">
 <p><span style="font-size: 40px">Phaeophyceae</span></p>
@@ -949,8 +964,42 @@
 <div class="absolute" data-id="SpectralSignature" style="top: 45%; left: -10%; ">
 <p><img data-src="Images/Figure_Hyperspectral_Instru.png" height="680"></p>
 </div>
-<div class="absolute" style="top: 45%; right: -10%; ">
-<p><img data-src="Images/Speclib_Drone_Intru.png" height="680"></p>
+<div class="absolute" data-id="SpectralSignatureGIF" style="top: 45%; right: -10%; ">
+<p><img data-src="Images/Spectra_resampled_gif.gif" height="680"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 10%; left: 0%; ">
+<p><img data-src="Images/BedePaperCover.png" height="450"></p>
+</div>
+</section>
+<section id="discriminate-green-macrophytes-using-remote-sensing-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Discriminate green macrophytes using remote sensing</h2>
+<div class="absolute" style="top: 10%; left: 0%; ">
+<p><img data-src="Images/BedePaperCover.png" height="450"></p>
+</div>
+<div class="fragment fade-out" data-fragment-index="3">
+<div class="absolute" data-id="SpectralSignatureGIF" style="top: 45%; left: -10%; ">
+<p><img data-src="Images/Spectra_resampled_gif.gif" height="680"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 30%; right: -10%; ">
+<p><img data-src="Images/spectro.jpg" height="620"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; left: 50%; ">
+<p><img data-src="Images/Sites_Bede.png" height="850"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 15%; left: 55%; ">
+<p><span style="font-size: 80px">More than 300 spectra</span></p>
+</div>
+</div>
+<div class="fragment fade-in" data-fragment-index="3">
+<div class="absolute" style="top: 45%; left: -10%; ">
+<p><img data-src="Images/Spectra_resampled_gif.gif" height="680"></p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="4" style="top: 10%; right: -10%; ">
+<p><img data-src="Images/Spectra_distance_gif.gif" height="800"></p>
+</div>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="4" style="top: 10%; right: -10%; ">
+<p><img data-src="Images/Figure6_Bede.png" height="1150"></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
