--- a/index.html
+++ b/index.html
@@ -907,17 +907,17 @@
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
-<div class="absolute fragment fade-out" data-id="SpectralSignature" data-fragment-index="1" style="top: 14%; left: -8%; ">
-<p><img data-src="Images/Figure_Hyperspectral.png" height="680"></p>
+<div class="absolute fragment fade-out" data-id="SpectralSignature" data-fragment-index="1" style="top: 14%; left: -2%; ">
+<p><img data-src="Images/Figure_Hyperspectral.png" height="630"></p>
 </div>
-<div class="absolute fragment fade-in" data-id="SpectralSignature" data-fragment-index="1" style="top: 14%; left: -8%; ">
-<p><img data-src="Images/Figure_Hyperspectral_faded.png" height="680"></p>
+<div class="absolute fragment fade-in" data-id="SpectralSignature" data-fragment-index="1" style="top: 14%; left: -2%; ">
+<p><img data-src="Images/Figure_Hyperspectral_faded.png" height="630"></p>
 </div>
-<div class="absolute fragment fade-out" data-id="SpectralSignature" data-fragment-index="1" style="top: 10.5%; right: -8%; ">
-<p><img data-src="Images/Disc_Pigment_Table.png" height="700"></p>
+<div class="absolute fragment fade-out" data-id="SpectralSignature" data-fragment-index="1" style="top: 12%; right: -2%; ">
+<p><img data-src="Images/Disc_Pigment_Table.png" height="630"></p>
 </div>
-<div class="absolute fragment fade-in" data-id="SpectralSignature" data-fragment-index="1" style="top: 10.5%; right: -8%; ">
-<p><img data-src="Images/Disc_Pigment_Table_faded.png" height="700"></p>
+<div class="absolute fragment fade-in" data-id="SpectralSignature" data-fragment-index="1" style="top: 12%; right: -2%; ">
+<p><img data-src="Images/Disc_Pigment_Table_faded.png" height="630"></p>
 </div>
 <div class="absolute fragment fade-out" data-fragment-index="1" style="left: 0%; bottom: 0%; ">
 <p><img data-src="Images/Pheophyceae_cropped.png" height="350"></p>
@@ -961,10 +961,15 @@
 </section>
 <section id="discriminate-green-macrophytes-using-remote-sensing" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
 <h2 data-id="quarto-animate-title">Discriminate green macrophytes using remote sensing</h2>
-<div class="absolute" data-id="SpectralSignature" style="top: 45%; left: -10%; ">
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="absolute" data-id="SpectralSignature" style="top: 45%; left: -2%; ">
 <p><img data-src="Images/Figure_Hyperspectral_Instru.png" height="680"></p>
 </div>
-<div class="absolute" data-id="SpectralSignatureGIF" style="top: 45%; right: -10%; ">
+<div class="absolute" data-id="SpectralSignatureGIF" style="top: 45%; right: -2%; ">
 <p><img data-src="Images/Spectra_resampled_gif.gif" height="680"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="1" style="top: 10%; left: 0%; ">
@@ -973,11 +978,16 @@
 </section>
 <section id="discriminate-green-macrophytes-using-remote-sensing-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
 <h2 data-id="quarto-animate-title">Discriminate green macrophytes using remote sensing</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
 <div class="absolute" style="top: 10%; left: 0%; ">
 <p><img data-src="Images/BedePaperCover.png" height="450"></p>
 </div>
 <div class="fragment fade-out" data-fragment-index="3">
-<div class="absolute" data-id="SpectralSignatureGIF" style="top: 45%; left: -10%; ">
+<div class="absolute" data-id="SpectralSignatureGIF" style="top: 45%; left: -2%; ">
 <p><img data-src="Images/Spectra_resampled_gif.gif" height="680"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="2" style="top: 30%; right: -10%; ">
@@ -991,15 +1001,26 @@
 </div>
 </div>
 <div class="fragment fade-in" data-fragment-index="3">
-<div class="absolute" style="top: 45%; left: -10%; ">
+<div class="absolute" style="top: 45%; left: -2%; ">
 <p><img data-src="Images/Spectra_resampled_gif.gif" height="680"></p>
 </div>
-<div class="absolute fragment fade-out" data-fragment-index="4" style="top: 10%; right: -10%; ">
+<div class="absolute fragment fade-out" data-fragment-index="4" style="top: 10%; right: -2%; ">
 <p><img data-src="Images/Spectra_distance_gif.gif" height="800"></p>
 </div>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="4" style="top: 10%; right: -10%; ">
+<div class="absolute fragment fade-in" data-fragment-index="4" style="top: 8%; right: -2%; ">
 <p><img data-src="Images/Figure6_Bede.png" height="1150"></p>
+</div>
+</section>
+<section id="drone-mapping-of-intertidal-vegetation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Drone mapping of Intertidal Vegetation</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="top: 7%; left: -2%; ">
+<p><video data-src="Videos/Flight_Matrice200.mp4" height="1200" controls=""><a href="Videos/Flight_Matrice200.mp4">Video</a></video></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
