correcting out of screen figures

--- a/index.html
+++ b/index.html
@@ -508,21 +508,21 @@
 <div class="absolute" style="bottom: 0%; right: -2%; ">
 <p><span style="color: black;">2</span></p>
 </div>
-<div class="fragment fade-in absolute" data-id="VideoSoft" data-fragment-index="1" style="top: 30%; left: 0%; ">
+<div class="absolute" data-id="VideoSoft" style="top: 30%; left: 0%; ">
 <p><video data-src="Videos/P4810662.MP4" height="650" controls=""><a href="Videos/P4810662.MP4">Video</a></video></p>
 </div>
-<div class="fragment fade-in absolute" data-id="VideoHard" data-fragment-index="1" style="top: 30%; left: 50%; ">
+<div class="absolute" data-id="VideoHard" style="top: 30%; right: 0%; ">
 <p><video data-src="Videos/DJI_0076_1.mp4" height="650" controls=""><a href="Videos/DJI_0076_1.mp4">Video</a></video></p>
 </div>
-<div class="fragment fade-in" data-fragment-index="1">
+<div>
 <ul>
 <li>Soft Bottom and Hard Bottom</li>
 </ul>
 </div>
-<div class="fragment absolute fade-in" data-id="TextSoft" data-fragment-index="1" style="left: 2%; bottom: 15%; ">
+<div class="absolute" data-id="TextSoft" style="left: 0%; bottom: 15%; ">
 <p><span style="color: black; font-size: 40px">Aveiro Lagoon, Portugal</span></p>
 </div>
-<div class="fragment absolute fade-in" data-fragment-index="1" style="left: 52%; bottom: 15%; ">
+<div class="absolute" style="bottom: 15%; right: 2%; ">
 <p><span style="color: black; font-size: 40px">Mesquer, France</span></p>
 </div>
 </section>
@@ -967,10 +967,10 @@
 </div>
 </div>
 <div class="absolute" data-id="SpectralSignature" style="top: 45%; left: -2%; ">
-<p><img data-src="Images/Figure_Hyperspectral_Instru.png" height="680"></p>
+<p><img data-src="Images/Figure_Hyperspectral_Instru.png" height="600"></p>
 </div>
 <div class="absolute" data-id="SpectralSignatureGIF" style="top: 45%; right: -2%; ">
-<p><img data-src="Images/Spectra_resampled_gif.gif" height="680"></p>
+<p><img data-src="Images/Spectra_resampled_gif.gif" height="600"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="1" style="top: 10%; left: 0%; ">
 <p><img data-src="Images/BedePaperCover.png" height="450"></p>
@@ -987,25 +987,25 @@
 <p><img data-src="Images/BedePaperCover.png" height="450"></p>
 </div>
 <div class="fragment fade-out" data-fragment-index="3">
-<div class="absolute" data-id="SpectralSignatureGIF" style="top: 45%; left: -2%; ">
-<p><img data-src="Images/Spectra_resampled_gif.gif" height="680"></p>
+<div class="absolute" data-id="SpectralSignatureGIF" style="top: 50%; left: -2%; ">
+<p><img data-src="Images/Spectra_resampled_gif.gif" height="600"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 30%; right: -10%; ">
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 30%; right: -5%; ">
 <p><img data-src="Images/spectro.jpg" height="620"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; left: 50%; ">
-<p><img data-src="Images/Sites_Bede.png" height="850"></p>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; left: 48%; ">
+<p><img data-src="Images/Sites_Bede.png" height="830"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="2" style="top: 15%; left: 55%; ">
 <p><span style="font-size: 80px">More than 300 spectra</span></p>
 </div>
 </div>
 <div class="fragment fade-in" data-fragment-index="3">
-<div class="absolute" style="top: 45%; left: -2%; ">
-<p><img data-src="Images/Spectra_resampled_gif.gif" height="680"></p>
+<div class="absolute" style="top: 50%; left: -2%; ">
+<p><img data-src="Images/Spectra_resampled_gif.gif" height="600"></p>
 </div>
-<div class="absolute fragment fade-out" data-fragment-index="4" style="top: 10%; right: -2%; ">
-<p><img data-src="Images/Spectra_distance_gif.gif" height="800"></p>
+<div class="absolute fragment fade-out" data-fragment-index="4" style="top: 20%; right: -2%; ">
+<p><img data-src="Images/Spectra_distance_gif.gif" height="700"></p>
 </div>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="4" style="top: 8%; right: -2%; ">
@@ -1021,6 +1021,15 @@
 </div>
 <div class="absolute" style="top: 7%; left: -2%; ">
 <p><video data-src="Videos/Flight_Matrice200.mp4" height="1200" controls=""><a href="Videos/Flight_Matrice200.mp4">Video</a></video></p>
+</div>
+<div class="absolute" style="top: 60%; left: 28%; ">
+<p><img data-src="Images/matrice.jpg" height="450"></p>
+</div>
+<div class="absolute" style="top: 60%; left: 70%; ">
+<p><img data-src="Images/micasense.png" height="450"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 8%; left: 28%; ">
+<p><img data-src="Images/micasense_SRF.png" height="650"></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
