--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,115 @@
 <div class="absolute fragment fade-in" data-fragment-index="1" style="top: 8%; left: 28%; ">
 <p><img data-src="Images/micasense_SRF.png" height="650"></p>
 </div>
+</section>
+<section id="detailed-study-sites" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Detailed Study Sites</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="top: 10%; right: 0%; ">
+<p><img data-src="Images/Fig1_Map_Drone_Sites.png" height="1200"></p>
+</div>
+<div class="absolute" style="top: 20%; ">
+<style>
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.table-container {
+    width: 60%;
+    font-size: 40px;
+}
+th {
+    background-color: #d3d3d3; /* Darker gray background for headers */
+    border: 1px solid black;
+    padding: 15px;
+    text-align: center;
+    vertical-align: middle;
+}
+td {
+    border: 1px solid black;
+    padding: 15px;
+    text-align: center;
+    vertical-align: middle;
+}
+tr:nth-child(2) {
+    background-color: #f9f9f9; /* Light gray background for the first data row */
+}
+tr:nth-child(3) {
+    background-color: #e9e9e9; /* Slightly darker gray for the second data row */
+}
+tr:nth-child(4) {
+    background-color: #d9d9d9; /* Darker gray for the third data row */
+}
+</style>
+
+<div class="container">
+    <div class="table-container">
+        <table>
+            <tbody><tr><th>
+                </th><th>Country</th>
+                <th>Site</th>
+                <th>Name</th>
+                <th>Altitude</th>
+            
+            </tr><tr>
+                <td>A</td>
+                <td>France</td>
+                <td>Morbihan Gulf</td>
+                <td>Arz Island<br>Duer<br>Duer</td>
+                <td>- 12 m<br>- 12 m<br>- 120 m</td>
+            </tr>
+            <tr class="fragment fade-in" data-fragment-index="1">
+                <td>B</td>
+                <td>France</td>
+                <td>Noirmoutier Island</td>
+                <td>Barbâtre<br>L'Epine</td>
+                <td>- 120 m<br>- 120 m</td>
+            </tr>
+            <tr class="fragment fade-in" data-fragment-index="2">
+                <td>C</td>
+                <td>Portugal</td>
+                <td>Aveiro Lagoon</td>
+                <td>Inner<br>Mataducos<br>Gafanha<br>Gafanha</td>
+                <td>- 120 m<br>- 120 m<br>- 120 m<br>- 12 m</td>
+            </tr>
+        </tbody></table>
+    </div>
+</div>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" data-id="2alt" style="left: 0%; bottom: 15%; ">
+<p><span style="font-size: 80px">2 altitudes = 2 purposes</span></p>
+</div>
+</section>
+<section id="altitudes-2-purposes" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">2 altitudes = 2 purposes</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="absolute" data-id="2alt" style="font-size: 80px; color: rgba(0,0,0,0);top: -0%; left: 0%; ">
+<p>2 altitudes = 2 purposes</p>
+</div>
+<div class="absolute" style="top: 10%; left: -2%; ">
+<p><img data-src="Images/Graphical_Abstract.png" height="1150"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 8%; left: 26%; ">
+<p><img data-src="Images/Gaf_Low_RGB.png" height="1200"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 30px;top: 34%; left: 63%; ">
+<p>~ 1.5 millions pixels</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; right: -2%; ">
+<p><img data-src="Images/table_training_px.png" height="350"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2 " style="font-size: 50px;top: 65%; right: 0%; ">
+<p>~ 500 000 training pixels</p>
+</div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
 <div class="footer footer-default">
