--- a/index.html
+++ b/index.html
@@ -1137,8 +1137,31 @@ tr:nth-child(4) {
 <div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; right: -2%; ">
 <p><img data-src="Images/table_training_px.png" height="350"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="2 " style="font-size: 50px;top: 65%; right: 0%; ">
+<div class="absolute fragment fade-in" data-fragment-index="2 " data-id="training_px" style="font-size: 50px;top: 65%; right: 2%; ">
 <p>~ 500 000 training pixels</p>
+</div>
+</section>
+<section id="model-building" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Model Building</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="absolute" data-id="training_px" style="font-size: 50px;top: 45%; left: -3%; ">
+<p>~ 500 000 training pixels</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 43%; left: 22%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 30%; left: 45%; ">
+<p><img data-src="Images/fastai.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 43%; right: 22%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; right: -2%; ">
+<p><img data-src="Images/DISCOV_logo.png" height="550"></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
