--- a/index.html
+++ b/index.html
@@ -1163,6 +1163,15 @@ tr:nth-child(4) {
 <div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; right: -2%; ">
 <p><img data-src="Images/DISCOV_logo.png" height="550"></p>
 </div>
+</section>
+<section id="the-model" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">The Model</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<iframe width="780" height="500" src="https://github.com/SigOiry/DISCOV-MicaSense" title="Webpage example"></iframe>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
 <div class="footer footer-default">
