--- a/index.html
+++ b/index.html
@@ -1148,6 +1148,7 @@ tr:nth-child(4) {
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
+<div class="fragment fade-out" data-fragment-index="3">
 <div class="absolute" data-id="training_px" style="font-size: 50px;top: 45%; left: -3%; ">
 <p>~ 500 000 training pixels</p>
 </div>
@@ -1157,11 +1158,45 @@ tr:nth-child(4) {
 <div class="absolute fragment fade-in" data-fragment-index="1" style="top: 30%; left: 45%; ">
 <p><img data-src="Images/fastai.png" width="300"></p>
 </div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;top: 27%; left: 44%; ">
+<p>Fast.ai workflow</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;left: 44%; bottom: 29%; ">
+<p>Neurtal Network</p>
+</div>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="top: 27%; left: 0%; ">
+<p><img data-src="Images/table_training_px.png" height="450"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="font-size: 50px;left: 35%; bottom: 57%; ">
+<ul>
+<li>Tuned with 12 Epoch</li>
+</ul>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="font-size: 50px;left: 35%; bottom: 37%; ">
+<ul>
+<li>More than 26 000 trainable parameters</li>
+</ul>
+</div>
 <div class="absolute fragment fade-in" data-fragment-index="2" style="top: 43%; right: 22%; ">
 <p><img data-src="Images/Arrow_right_short.png" width="300"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; right: -2%; ">
+<div class="absolute fragment fade-in" data-fragment-index="2" data-id="DISCOV" style="top: 25%; right: -2%; ">
 <p><img data-src="Images/DISCOV_logo.png" height="550"></p>
+</div>
+</section>
+<section id="prediction" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Prediction</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="absolute" data-id="DISCOV" style="top: 25%; left: -2%; ">
+<p><img data-src="Images/DISCOV_logo.png" height="550"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 10%; left: 25%; ">
+<p><img data-src="Data/Micasense_images/Gafanha_Low.png" height="950"></p>
 </div>
 </section>
 <section id="the-model" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
