--- a/index.html
+++ b/index.html
@@ -1257,6 +1257,36 @@ tr:nth-child(4) {
 <p><img data-src="Images/FigX-Gaf_High_Pred.png" height="1100"></p>
 </div>
 </section>
+<section id="variable-importance" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Variable Importance</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="fragment fade-out" data-fragment-index="3">
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 15%; left: 0%; ">
+<p><img data-src="Images/TableVIP1.png" height="400"></p>
+</div>
+</div>
+<div class="fragment fade-out" data-fragment-index="5">
+<div class="absolute fragment fade-in" data-fragment-index="3" style="top: 15%; left: 0%; ">
+<p><img data-src="Images/TableVIP1_1.png" height="400"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="top: 55%; left: 0%; ">
+<p><img data-src="Images/TableVIP2_1.png" height="400"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; right: 3.3%; ">
+<p>Accuracy = <span style="color: green"><strong>a</strong></span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="4" style="top: 65%; right: 0%; ">
+<p>Accuracy = <span style="color: green"><strong>a</strong></span> ± <span style="color: red"><strong>b</strong></span></p>
+</div>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="5" style="top: 10%; left: 20%; ">
+<p><img data-src="Images/Fig_VIP.png" height="1150"></p>
+</div>
+</section>
 <section id="the-model" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
 <h2 data-id="quarto-animate-title">The Model</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
@@ -1264,7 +1294,49 @@ tr:nth-child(4) {
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
-<iframe width="1500" height="800" src="Data/git_repo_DISCOV/DISCOV-MicaSense.htm" title="Webpage example"></iframe>
+<div class="fragment fade-out" data-fragment-index="3">
+<div class="absolute" style="top: 10%; left: 40%; ">
+<p><img data-src="Images/DISCOV_logo.png" height="550"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 40%; left: 0%; ">
+<p><img data-src="Images/micasense.png" height="550"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 40%; right: 0%; ">
+<p><img data-src="Images/metashape.png" height="400"></p>
+</div>
+</div>
+<div class="absolute fragment fade-in" data-id="gitrepo" data-fragment-index="3" style="left: 10%; ">
+<iframe width="2000" height="1100" src="Data/git_repo_DISCOV/DISCOV-MicaSense.htm" title="Webpage example"></iframe>
+</div>
+</section>
+<section id="the-model-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">The Model</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="absolute" data-id="gitrepo" style="left: 0%; ">
+<iframe width="1000" height="1100" src="Data/git_repo_DISCOV/DISCOV-MicaSense.htm" title="Webpage example"></iframe>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;top: 10%; left: 40%; ">
+<ul>
+<li>Pre-trained model DISCOV V1, ready to be used</li>
+<li>Training dataset</li>
+<li>Validation dataset</li>
+<li>Script to train a new model, with updated training dataset</li>
+<li>Script to predict on new data</li>
+</ul>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 50%; right: 0%; ">
+<p><img data-src="Images/DISCOV_logoV2.png" height="550"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 50%; left: 40%; ">
+<p><img data-src="Images/DISCOV_logo.png" height="550"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 67%; left: 63%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
 <div class="footer footer-default">
